# libconops

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  README.rst  conops.c  conops.h  fsm.c  fsm.h  main.c  meson.build
.github/workflows/: unit-tests.yml
include/conops/: conops.h
include/conops/util/: cmd_queue.h
src/: conops.c
src/util/: cmd_queue.c
test/: CMakeLists.txt
test/util/: cmd_queue_test.cc  meson.build
